# ml

./: new.ipynb  pyproject.toml  requirements.txt  test.ipynb  utils.py
01 Simple Linear Regression/: Simple Linear regression.ipynb
02 Multiple linear Regression/: MLR.ipynb
03 Feature Engineering/: Feature Engineering.ipynb  Results.csv  model.joblib  scaler.joblib
04 Automated Preprocessing/: Autoamted Preprocessing.ipynb  model.joblib  pre.joblib
05 Feature Selecyion/: Feature Selection.ipynb
06 Regularization/: Regularization.ipynb
07 Regression Project/: Regression Project.ipynb
08 Logistic Regtression/: Logistic Regression.ipynb
